# rustor

./: Cargo.toml  README.md
sapper/: package.json  pnpm-lock.yaml
sapper/src/components/: File.svelte  Folder.svelte  Metadata.ts  Modal.svelte  ModalUpload.svelte  Nav.svelte  OptionBar.svelte  Plus.svelte  clickOutside.js
sapper/src/routes/files/: [...slug].svelte  index.svelte
src/: data.rs  handlers.rs  main.rs
sveltekit/: package.json  pnpm-lock.yaml
sveltekit/src/lib/: File.svelte
sveltekit/src/routes/: index.svelte
sveltekit/src/routes/files/: [...slug].svelte  index.svelte
templates/: index.stpl
