[package]
name = "rustor"
version = "0.1.0"
authors = ["Hemanth Bollamreddi <blmhemu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.6"
warp = "0.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
sailfish = "0.3"
urlencoding = "1.0.0"
sanitize-filename = "0.3.0"
futures-util ="0.3"
bytes = "1.0"
